Added fetch functionality to add the image and the joke/statement each time the user clicks on the 'Another' button.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="joke">Test</div>
-        
-
+        <div class="wrapper">
+            <img src="" alt="Icon" id="icon">
+        </div>
+        <div class="wrapper">
+            <button id="button">Another</button>
+        </div>
+        <div id="joke"></div>
         <script src="scripts.js" ></script>
     </body>
 </html>
